added true to resolve(...) primary logging